--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 SCADA List Address Fill/~$PPL006-001 LAG P3 SCADA - IFR rev B.xlsm
+
+# Custom
+*.xlsx
+*.xlsm
+*.xlsb
